--- a/birthday1.html
+++ b/birthday1.html
@@ -202,9 +202,9 @@
         </p>
 
         <div class="quote">
-          <strong>5201314</strong> — this is our first love code.  
+          <strong>❤️ 5201314 ❤️</strong> — this is our first love code.  
           A promise in numbers, a heartbeat that whispers:
-          <em>“I love you for a lifetime.”</em>
+          <em>“ ❤️ I love you for a lifetime. ❤️”</em>
         </div>
 
         <p class="text">
@@ -213,7 +213,7 @@
         </p>
 
         <!-- TODO: Replace the href with your real surprise link -->
-        <a class="cta" href="https://your-link-here.com" target="_blank" rel="noopener noreferrer" aria-label="Open your birthday surprise in a new tab">
+        <a class="cta" href="https://savitha-birthday.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="Open your birthday surprise in a new tab">
           🎁 Open Your Surprise
         </a>
       </div>
